added pickle and ipynb file for iris

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,7 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+# Folder view configuration files #
+.DS_Store
+Desktop.ini
