added iris app and templates

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ media
 *.bak 
 
 # If you are using PyCharm # 
+.idea/
 .idea/**/workspace.xml 
 .idea/**/tasks.xml 
 .idea/dictionaries 
@@ -114,6 +115,7 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+.vscode/
 
 # Folder view configuration files #
 .DS_Store
