--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.2.10
 attrs==19.3.0
 backcall==0.2.0
 bleach==3.1.5
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 Django==3.0.8
@@ -20,7 +21,9 @@ jupyter==1.0.0
 jupyter-client==6.1.6
 jupyter-console==6.1.0
 jupyter-core==4.6.3
+kiwisolver==1.2.0
 MarkupSafe==1.1.1
+matplotlib==3.3.0
 mistune==0.8.4
 mysqlclient==2.0.1
 nbconvert==5.6.1
