--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Django==3.1
 django-crispy-forms==1.9.2
 django-filter==2.3.0
 djangorestframework==3.11.1
+gunicorn==20.0.4
 jedi==0.17.2
 Jinja2==2.11.2
 mysqlclient==2.0.1
