--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==3.1
 django-crispy-forms==1.9.2
 django-filter==2.3.0
+django-heroku==0.3.1
 djangorestframework==3.11.1
 gunicorn==20.0.4
 jedi==0.17.2
@@ -22,8 +24,10 @@ numpy==1.19.2
 packaging==20.4
 pandas==1.1.0
 Pillow==7.2.0
+psycopg2==2.8.6
 python-dateutil==2.8.1
 pytz==2020.1
 six==1.15.0
 sklearn==0.0
 sqlparse==0.3.1
+whitenoise==5.2.0
